--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>HJR-Bot: Интерактивный Обзор</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Chosen Palette: Calm Harmony -->
-    <!-- Application Structure Plan: A single-page application with a sticky navigation header for easy access to different sections. The structure is designed to guide the user logically: from a high-level introduction (Hero), through the core value proposition presented in an interactive 'Problem/Solution' format, down to detailed feature explanations ('How It Works') with visual process flows, and finally, an interactive FAQ section for common queries. This thematic structure, rather than mirroring the original document, enhances user engagement and comprehension by connecting pain points directly to the bot's features in an intuitive, explorable manner. -->
+    <!-- Application Structure Plan: A single-page application with a sticky navigation header for easy access to different sections. The structure is designed to guide the user logically: from a high-level introduction (Hero), through the core value proposition presented in an interactive 'Problem/Solution' format, down to detailed feature explanations ('How It Works'), a 'Tech Stack' section for transparency, a 'Roadmap' for future plans, and finally, an interactive FAQ section for common queries. This thematic structure enhances user engagement and comprehension. -->
     <!-- Visualization & Content Choices:
-        1. Problem/Solution Section: Info -> Four key problems and their corresponding bot solutions. Goal -> Compare and connect. Method -> Interactive tabbed interface. A user clicks a problem, and the corresponding solution is displayed. Interaction -> Click-to-reveal. Justification -> More engaging than a linear list, clearly demonstrates the bot's value.
-        2. 'How It Works' Section: Info -> Step-by-step processes for bot functions. Goal -> Organize and explain complex workflows. Method -> Simple, clean process flow diagrams built with structured HTML/CSS (flexbox, borders) to represent stages and transitions. Interaction -> Static visual aid. Justification -> Visual flows are more intuitive and easier to digest than descriptive text.
-        3. FAQ Section: Info -> Questions and answers about the bot. Goal -> Inform and organize. Method -> Accordion UI component. Interaction -> Click-to-expand/collapse answers. Justification -> A standard, space-efficient, and user-friendly pattern for presenting Q&A content.
+        1. Problem/Solution Section: Info -> Four key problems and their corresponding bot solutions. Goal -> Compare and connect. Method -> Interactive tabbed interface. Interaction -> Click-to-reveal. Justification -> More engaging than a linear list.
+        2. 'How It Works' Section: Info -> Step-by-step processes for bot functions. Goal -> Organize and explain complex workflows. Method -> Simple, clean process flow diagrams built with structured HTML/CSS. Interaction -> Static visual aid. Justification -> Visual flows are more intuitive than text.
+        3. Tech Stack Section: Info -> Technologies used. Goal -> Inform and build trust. Method -> Grid layout with cards for each technology. Interaction -> Static. Justification -> Clearly presents technical details.
+        4. FAQ Section: Info -> Questions and answers about the bot. Goal -> Inform and organize. Method -> Accordion UI component. Interaction -> Click-to-expand/collapse answers. Justification -> A standard, space-efficient, and user-friendly pattern.
         All visual elements are created using HTML and Tailwind CSS. -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <style>
@@ -52,6 +53,7 @@
         <ul class="hidden md:flex space-x-8">
             <li><a href="#problems" class="text-slate-600 hover:text-indigo-700 transition">Проблемы и Решения</a></li>
             <li><a href="#features" class="text-slate-600 hover:text-indigo-700 transition">Как это работает</a></li>
+            <li><a href="#tech-stack" class="text-slate-600 hover:text-indigo-700 transition">Технологии</a></li>
             <li><a href="#faq" class="text-slate-600 hover:text-indigo-700 transition">FAQ</a></li>
         </ul>
         <div class="md:hidden">
@@ -64,6 +66,7 @@
         <ul class="px-6 pb-4 space-y-2">
             <li><a href="#problems" class="block text-slate-600 hover:text-indigo-700 transition">Проблемы и Решения</a></li>
             <li><a href="#features" class="block text-slate-600 hover:text-indigo-700 transition">Как это работает</a></li>
+            <li><a href="#tech-stack" class="text-slate-600 hover:text-indigo-700 transition">Технологии</a></li>
             <li><a href="#faq" class="block text-slate-600 hover:text-indigo-700 transition">FAQ</a></li>
         </ul>
     </div>
@@ -158,6 +161,61 @@
         </div>
     </section>
 
+    <section id="tech-stack" class="py-16">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl md:text-4xl font-bold mb-2">Технический стек</h2>
+            <p class="text-slate-600 max-w-2xl mx-auto">Наш бот — это полноценное облачное приложение, созданное с использованием современных и надежных технологий.</p>
+        </div>
+        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 text-center">
+            <div class="flex flex-col items-center">
+                <div class="bg-white rounded-full p-4 shadow-lg mb-4">
+                    <span class="text-4xl">🐍</span>
+                </div>
+                <h5 class="font-bold">Python</h5>
+                <p class="text-sm text-slate-500">Основной язык</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <div class="bg-white rounded-full p-4 shadow-lg mb-4">
+                    <span class="text-4xl">🤖</span>
+                </div>
+                <h5 class="font-bold">pyTelegramBotAPI</h5>
+                <p class="text-sm text-slate-500">Библиотека для Telegram</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <div class="bg-white rounded-full p-4 shadow-lg mb-4">
+                    <span class="text-4xl">🐘</span>
+                </div>
+                <h5 class="font-bold">PostgreSQL</h5>
+                <p class="text-sm text-slate-500">База данных</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <div class="bg-white rounded-full p-4 shadow-lg mb-4">
+                    <span class="text-4xl">🚂</span>
+                </div>
+                <h5 class="font-bold">Railway</h5>
+                <p class="text-sm text-slate-500">Хостинг-платформа</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <div class="bg-white rounded-full p-4 shadow-lg mb-4">
+                    <span class="text-4xl">🦄</span>
+                </div>
+                <h5 class="font-bold">Gunicorn</h5>
+                <p class="text-sm text-slate-500">Веб-сервер</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="roadmap" class="py-16">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl md:text-4xl font-bold mb-2">Планы на будущее</h2>
+            <p class="text-slate-600 max-w-2xl mx-auto">Проект постоянно развивается. Вот что мы планируем добавить в ближайшее время.</p>
+        </div>
+        <div class="max-w-3xl mx-auto bg-white p-8 rounded-xl shadow-lg">
+            <h4 class="text-xl font-bold text-indigo-700 mb-4">Полная реализация функции "Вопрос по правилам"</h4>
+            <p class="text-slate-600">Сейчас эта функция находится в разработке. Мы планируем завершить ее интеграцию, чтобы любой участник мог мгновенно получать консультации по уставу с помощью команды `/ask`. Это полностью устранит необходимость ручного поиска информации и обеспечит единое толкование правил для всех.</p>
+        </div>
+    </section>
+
     <section id="faq" class="py-16">
         <div class="text-center mb-12">
             <h2 class="text-3xl md:text-4xl font-bold mb-2">Часто задаваемые вопросы</h2>
@@ -206,6 +264,28 @@
                 </div>
                 <div class="faq-answer px-6 pb-2">
                     <p class="text-slate-600 pb-4">Да, можете. Код бота полностью открыт и доступен на GitHub по лицензии, которая позволяет свободное использование и модификацию. Вы можете клонировать репозиторий, настроить его под свои нужды и запустить собственную копию. Мы верим в открытый исходный код.</p>
+                </div>
+            </div>
+            <div class="bg-white rounded-xl shadow-lg">
+                <div class="faq-question p-6 flex justify-between items-center">
+                    <h5 class="font-medium text-lg">Что если ИИ выдаст решение, которое нарушает правила?</h5>
+                    <span class="arrow-down text-indigo-700">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                        </span>
+                </div>
+                <div class="faq-answer px-6 pb-2">
+                    <p class="text-slate-600 pb-4">Если ИИ нарушает правила, то его решения автоматически считаются недействительными. Это указано в уставе редакторов.</p>
+                </div>
+            </div>
+            <div class="bg-white rounded-xl shadow-lg">
+                <div class="faq-question p-6 flex justify-between items-center">
+                    <h5 class="font-medium text-lg">Что если решение ИИ формально верное, но все считают его несправедливым?</h5>
+                    <span class="arrow-down text-indigo-700">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                        </span>
+                </div>
+                <div class="faq-answer px-6 pb-2">
+                    <p class="text-slate-600 pb-4">Участники могут сделать запрос на повторное пересмотрение путем голосования. Тогда ИИ пересмотрит свое решение, учитывая все новые аргументы и доказательства. И он не предвзятый как человек, он сделает пересмотр исключительно основываясь на аргументах, доказательствах и правилах.</p>
                 </div>
             </div>
         </div>
