--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
 <footer class="bg-slate-800 text-white mt-16">
     <div class="container mx-auto px-6 py-8 text-center">
-        <p>&copy; 2024 HJR-Bot. Все права защищены.</p>
+        <p>&copy; 2025 Honji Review. CC-BY-SA.</p>
         <p class="text-sm text-slate-400 mt-2">Создано для повышения эффективности и справедливости в сообществе Honji Review.</p>
     </div>
 </footer>
