--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,41 +7,44 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-[#1E1E1E] text-white">
+<body class="bg-[#1E1E1E] text-white overflow-x-hidden">
 
 <!-- Header -->
 <header class="py-6 px-4 md:px-8 sticky top-0 z-50 bg-[#1E1E1E]/80 backdrop-blur-md">
     <div class="container mx-auto flex justify-between items-center">
-        <h1 class="text-2xl font-bold">Honji Review</h1>
+        <a href="index.html" class="text-2xl font-bold">Honji Review</a>
         <nav class="hidden md:flex items-center space-x-8">
-            <a href="#about" class="hover:text-gray-300">О нас</a>
-            <a href="#works" class="hover:text-gray-300">Наши работы</a>
-            <a href="#reviews" class="hover:text-gray-300">Отзывы</a>
-            <a href="bot.html" class="hover:text-gray-300">HJR-Bot</a>
-            <a href="#" class="bg-gradient-to-r from-purple-600 to-blue-600 px-6 py-2 rounded-lg font-semibold hover:opacity-90 transition">Оставить заявку</a>
+            <a href="#about" class="hover:text-gray-300 transition">О нас</a>
+            <a href="#works" class="hover:text-gray-300 transition">Наши работы</a>
+            <a href="#reviews" class="hover:text-gray-300 transition">Отзывы</a>
+            <a href="bot.html" class="hover:text-gray-300 transition">HJR-Bot</a>
+            <a href="contact.html" class="bg-gradient-to-r from-purple-600 to-blue-600 px-6 py-2 rounded-lg font-semibold hover:opacity-90 transition">Оставить заявку</a>
         </nav>
         <button id="mobile-menu-button" class="md:hidden">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
         </button>
     </div>
     <!-- Mobile Menu -->
-    <div id="mobile-menu" class="hidden md:hidden mt-4">
+    <div id="mobile-menu" class="hidden md:hidden mt-4 px-4">
         <nav class="flex flex-col space-y-4">
             <a href="#about" class="hover:text-gray-300">О нас</a>
             <a href="#works" class="hover:text-gray-300">Наши работы</a>
             <a href="#reviews" class="hover:text-gray-300">Отзывы</a>
             <a href="bot.html" class="hover:text-gray-300">HJR-Bot</a>
-            <a href="#" class="bg-gradient-to-r from-purple-600 to-blue-600 px-6 py-2 rounded-lg font-semibold hover:opacity-90 transition text-center">Оставить заявку</a>
+            <a href="contact.html" class="bg-gradient-to-r from-purple-600 to-blue-600 px-6 py-2 rounded-lg font-semibold hover:opacity-90 transition text-center">Оставить заявку</a>
         </nav>
     </div>
 </header>
 
 <main class="container mx-auto px-4 md:px-8">
     <!-- Hero Section -->
-    <section id="hero" class="text-center py-24 md:py-32">
-        <h2 class="text-5xl md:text-7xl font-extrabold mb-4">Honji Review</h2>
-        <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto mb-8">Создаем качественные и объективные рецензии, помогая вам выбрать лучшее.</p>
-        <a href="#" class="bg-gradient-to-r from-purple-600 to-blue-600 px-8 py-4 rounded-lg font-semibold hover:opacity-90 transition text-lg">Связаться с нами</a>
+    <section id="hero" class="relative text-center py-24 md:py-32">
+        <div class="gradient-bg"></div>
+        <div class="relative z-10">
+            <h2 class="text-5xl md:text-7xl font-extrabold mb-4">Honji Review</h2>
+            <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto mb-8">Создаем качественные и объективные рецензии, помогая вам выбрать лучшее.</p>
+            <a href="contact.html" class="bg-gradient-to-r from-purple-600 to-blue-600 px-8 py-4 rounded-lg font-semibold hover:opacity-90 transition text-lg">Связаться с нами</a>
+        </div>
     </section>
 
     <!-- About Us Section -->
@@ -51,6 +54,12 @@
             <p class="text-gray-300 leading-relaxed">
                 Honji Review — это команда энтузиастов, посвятивших себя созданию честных и подробных обзоров. Мы верим, что качественная рецензия — это не просто мнение, а результат глубокого анализа и исследования. Наша миссия — предоставлять вам информацию, которой можно доверять, чтобы вы могли принимать взвешенные решения. Мы ценим объективность, прозрачность и внимание к деталям в каждой нашей работе.
             </p>
+            <p class="text-gray-300 leading-relaxed mt-4">
+                Для обеспечения максимальной объективности и автоматизации процессов мы разработали HJR-Bot — нашего цифрового ассистента. Узнайте больше о том, как он работает.
+            </p>
+            <div class="mt-8">
+                <a href="bot.html" class="bg-gray-700 text-white font-semibold py-3 px-6 rounded-lg hover:bg-gray-600 transition">Узнать про HJR-Bot</a>
+            </div>
         </div>
         <div class="md:w-1/2">
             <img src="https://placehold.co/600x400/2A2A2A/FFFFFF?text=Honji+Review" alt="About Us Image" class="rounded-xl shadow-lg w-full">
@@ -61,72 +70,25 @@
     <section id="works" class="py-16 md:py-24">
         <h3 class="text-4xl font-bold text-center mb-12">Наши работы</h3>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <!-- Work Item 1 -->
-            <div class="bg-[#2A2A2A] p-6 rounded-xl shadow-lg">
-                <img src="https://placehold.co/400x250/1E1E1E/FFFFFF?text=Работа+1" alt="Work 1" class="rounded-lg mb-4 w-full">
-                <h4 class="text-2xl font-bold mb-2">Название проекта 1</h4>
-                <p class="text-gray-400">Краткое описание проекта, его цели и результаты. Здесь можно рассказать о ключевых особенностях рецензии.</p>
-            </div>
-            <!-- Work Item 2 -->
-            <div class="bg-[#2A2A2A] p-6 rounded-xl shadow-lg">
-                <img src="https://placehold.co/400x250/1E1E1E/FFFFFF?text=Работа+2" alt="Work 2" class="rounded-lg mb-4 w-full">
-                <h4 class="text-2xl font-bold mb-2">Название проекта 2</h4>
-                <p class="text-gray-400">Краткое описание проекта, его цели и результаты. Здесь можно рассказать о ключевых особенностях рецензии.</p>
-            </div>
-            <!-- Work Item 3 -->
-            <div class="bg-[#2A2A2A] p-6 rounded-xl shadow-lg">
-                <img src="https://placehold.co/400x250/1E1E1E/FFFFFF?text=Работа+3" alt="Work 3" class="rounded-lg mb-4 w-full">
-                <h4 class="text-2xl font-bold mb-2">Название проекта 3</h4>
-                <p class="text-gray-400">Краткое описание проекта, его цели и результаты. Здесь можно рассказать о ключевых особенностях рецензии.</p>
-            </div>
+            <div class="bg-[#2A2A2A] p-6 rounded-xl shadow-lg"><img src="https://placehold.co/400x250/1E1E1E/FFFFFF?text=Работа+1" alt="Work 1" class="rounded-lg mb-4 w-full"><h4 class="text-2xl font-bold mb-2">Название проекта 1</h4><p class="text-gray-400">Краткое описание проекта...</p></div>
+            <div class="bg-[#2A2A2A] p-6 rounded-xl shadow-lg"><img src="https://placehold.co/400x250/1E1E1E/FFFFFF?text=Работа+2" alt="Work 2" class="rounded-lg mb-4 w-full"><h4 class="text-2xl font-bold mb-2">Название проекта 2</h4><p class="text-gray-400">Краткое описание проекта...</p></div>
+            <div class="bg-[#2A2A2A] p-6 rounded-xl shadow-lg"><img src="https://placehold.co/400x250/1E1E1E/FFFFFF?text=Работа+3" alt="Work 3" class="rounded-lg mb-4 w-full"><h4 class="text-2xl font-bold mb-2">Название проекта 3</h4><p class="text-gray-400">Краткое описание проекта...</p></div>
         </div>
     </section>
 
     <!-- Reviews Section -->
     <section id="reviews" class="py-16 md:py-24">
         <h3 class="text-4xl font-bold text-center mb-12">Отзывы</h3>
-        <div class="relative">
-            <div id="reviews-container" class="flex overflow-x-hidden">
-                <!-- Review 1 -->
-                <div class="review-slide flex-shrink-0 w-full md:w-1/2 lg:w-1/3 p-4">
-                    <div class="bg-[#2A2A2A] p-8 rounded-xl shadow-lg h-full">
-                        <p class="text-gray-300 mb-6">"Отличная работа! Рецензии всегда подробные и по делу. Помогли мне сделать правильный выбор."</p>
-                        <div class="flex items-center">
-                            <img src="https://placehold.co/50x50/FFFFFF/1E1E1E?text=А" alt="Avatar" class="w-12 h-12 rounded-full mr-4">
-                            <div>
-                                <h5 class="font-bold">Алексей</h5>
-                                <p class="text-sm text-gray-400">Пользователь</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Review 2 -->
-                <div class="review-slide flex-shrink-0 w-full md:w-1/2 lg:w-1/3 p-4">
-                    <div class="bg-[#2A2A2A] p-8 rounded-xl shadow-lg h-full">
-                        <p class="text-gray-300 mb-6">"Ценю вашу объективность. Никакой воды, только факты. Продолжайте в том же духе!"</p>
-                        <div class="flex items-center">
-                            <img src="https://placehold.co/50x50/FFFFFF/1E1E1E?text=М" alt="Avatar" class="w-12 h-12 rounded-full mr-4">
-                            <div>
-                                <h5 class="font-bold">Мария</h5>
-                                <p class="text-sm text-gray-400">Читатель</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Review 3 -->
-                <div class="review-slide flex-shrink-0 w-full md:w-1/2 lg:w-1/3 p-4">
-                    <div class="bg-[#2A2A2A] p-8 rounded-xl shadow-lg h-full">
-                        <p class="text-gray-300 mb-6">"Благодаря вам я открыл для себя много нового. Спасибо за качественный контент!"</p>
-                        <div class="flex items-center">
-                            <img src="https://placehold.co/50x50/FFFFFF/1E1E1E?text=И" alt="Avatar" class="w-12 h-12 rounded-full mr-4">
-                            <div>
-                                <h5 class="font-bold">Иван</h5>
-                                <p class="text-sm text-gray-400">Подписчик</p>
-                            </div>
-                        </div>
-                    </div>
+        <div class="relative max-w-6xl mx-auto">
+            <div class="overflow-hidden" id="slider-wrapper">
+                <div id="reviews-container" class="flex">
+                    <div class="review-slide flex-shrink-0 w-full md:w-1/2 lg:w-1/3 p-4"><div class="bg-[#2A2A2A] p-8 rounded-xl shadow-lg h-full"><p class="text-gray-300 mb-6">"Отличная работа! Рецензии всегда подробные и по делу."</p><div class="flex items-center"><img src="https://placehold.co/50x50/FFFFFF/1E1E1E?text=А" alt="Avatar" class="w-12 h-12 rounded-full mr-4"><div><h5 class="font-bold">Алексей</h5><p class="text-sm text-gray-400">Пользователь</p></div></div></div></div>
+                    <div class="review-slide flex-shrink-0 w-full md:w-1/2 lg:w-1/3 p-4"><div class="bg-[#2A2A2A] p-8 rounded-xl shadow-lg h-full"><p class="text-gray-300 mb-6">"Ценю вашу объективность. Никакой воды, только факты."</p><div class="flex items-center"><img src="https://placehold.co/50x50/FFFFFF/1E1E1E?text=М" alt="Avatar" class="w-12 h-12 rounded-full mr-4"><div><h5 class="font-bold">Мария</h5><p class="text-sm text-gray-400">Читатель</p></div></div></div></div>
+                    <div class="review-slide flex-shrink-0 w-full md:w-1/2 lg:w-1/3 p-4"><div class="bg-[#2A2A2A] p-8 rounded-xl shadow-lg h-full"><p class="text-gray-300 mb-6">"Благодаря вам я открыл для себя много нового."</p><div class="flex items-center"><img src="https://placehold.co/50x50/FFFFFF/1E1E1E?text=И" alt="Avatar" class="w-12 h-12 rounded-full mr-4"><div><h5 class="font-bold">Иван</h5><p class="text-sm text-gray-400">Подписчик</p></div></div></div></div>
                 </div>
             </div>
+            <button id="prev-slide" class="slider-btn left-0"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg></button>
+            <button id="next-slide" class="slider-btn right-0"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg></button>
         </div>
     </section>
 </main>
