--- a/bot.html
+++ b/bot.html
@@ -5,63 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HJR-Bot: Интерактивный Обзор</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
-        .tab-active {
-            background-color: #4338ca;
-            color: #ffffff;
-        }
-        .tab-inactive {
-            background-color: #eef2ff;
-            color: #4338ca;
-        }
-        .faq-question {
-            cursor: pointer;
-        }
-        .faq-answer {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.3s ease-out;
-        }
-        .arrow-down {
-            transition: transform 0.3s ease-out;
-        }
-        .rotated {
-            transform: rotate(180deg);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-slate-50 text-slate-800">
+<body id="bot-page" class="bg-slate-50 text-slate-800">
 
 <header class="bg-white/80 backdrop-blur-lg sticky top-0 z-50 shadow-sm">
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-        <div class="text-2xl font-bold text-indigo-700">
-            HJR-Bot
-        </div>
-        <ul class="hidden md:flex space-x-8">
-            <li><a href="index.html" class="text-slate-600 hover:text-indigo-700 transition">← На главный сайт</a></li>
+        <a href="index.html" class="text-2xl font-bold text-indigo-700">HJR-Bot</a>
+        <ul class="hidden md:flex items-center space-x-8">
+            <li><a href="index.html" class="bg-gray-200 text-indigo-700 font-semibold py-2 px-4 rounded-lg hover:bg-gray-300 transition">← На главный сайт</a></li>
             <li><a href="#problems" class="text-slate-600 hover:text-indigo-700 transition">Проблемы и Решения</a></li>
             <li><a href="#features" class="text-slate-600 hover:text-indigo-700 transition">Как это работает</a></li>
             <li><a href="#team" class="text-slate-600 hover:text-indigo-700 transition">Команда</a></li>
             <li><a href="#faq" class="text-slate-600 hover:text-indigo-700 transition">FAQ</a></li>
         </ul>
-        <div class="md:hidden">
-            <button id="mobile-menu-button-bot" class="text-slate-600 hover:text-indigo-700 focus:outline-none">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
-        </div>
+        <button id="mobile-menu-button-bot" class="md:hidden text-slate-600">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+        </button>
     </nav>
-    <div id="mobile-menu-bot" class="hidden md:hidden">
-        <ul class="px-6 pb-4 space-y-2">
+    <div id="mobile-menu-bot" class="hidden md:hidden mt-4 px-4">
+        <nav class="flex flex-col space-y-4">
             <li><a href="index.html" class="block text-slate-600 hover:text-indigo-700 transition">← На главный сайт</a></li>
             <li><a href="#problems" class="block text-slate-600 hover:text-indigo-700 transition">Проблемы и Решения</a></li>
             <li><a href="#features" class="block text-slate-600 hover:text-indigo-700 transition">Как это работает</a></li>
             <li><a href="#team" class="block text-slate-600 hover:text-indigo-700 transition">Команда</a></li>
             <li><a href="#faq" class="block text-slate-600 hover:text-indigo-700 transition">FAQ</a></li>
-        </ul>
+        </nav>
     </div>
 </header>
 
@@ -69,10 +38,10 @@
     <section id="hero" class="text-center py-16">
         <h1 class="text-4xl md:text-6xl font-bold text-indigo-700 mb-4">HJR-Bot: Ваш Автоматизированный Ассистент</h1>
         <p class="text-lg md:text-xl text-slate-600 max-w-3xl mx-auto">
-            Автоматизация рутины, обеспечение справедливости и прозрачности в работе сообщества Honji Review. Беспристрастный цифровой помощник для решения сложных административных задач.
+            Автоматизация рутины, обеспечение справедливости и прозрачности в работе сообщества Honji Review.
         </p>
         <div class="mt-8">
-            <a href="https://forms.gle/oP71jhyRrfZax4RZ9" target="_blank" rel="noopener noreferrer" class="bg-indigo-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out text-lg shadow-lg hover:shadow-xl">
+            <a href="https://forms.gle/oP71jhyRrfZax4RZ9" target="_blank" rel="noopener noreferrer" class="bg-indigo-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-indigo-700 transition">
                 Голосовать за внедрение бота
             </a>
         </div>
@@ -81,38 +50,23 @@
     <section id="problems" class="py-16">
         <div class="text-center mb-12">
             <h2 class="text-3xl md:text-4xl font-bold mb-2">Проблемы, которые мы решаем</h2>
-            <p class="text-slate-600 max-w-2xl mx-auto">Бот был создан для решения ключевых трудностей, мешающих росту проекта. Выберите проблему, чтобы увидеть, как HJR-Bot ее решает.</p>
+            <p class="text-slate-600 max-w-2xl mx-auto">Бот был создан для решения ключевых трудностей, мешающих росту проекта.</p>
         </div>
-        <div class="flex flex-col md:flex-row gap-8 min-h-[400px]">
+        <div class="flex flex-col md:flex-row gap-8 min-h-[300px]">
             <div class="w-full md:w-1/3 flex flex-col space-y-4">
-                <button data-tab="problem1" class="problem-tab tab-active text-left p-4 rounded-lg font-medium transition">Сложность и предвзятость при апелляциях</button>
-                <button data-tab="problem2" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition">Непонятные и разрозненные правила</button>
-                <button data-tab="problem3" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition">Отсутствие удобного инструмента для постов</button>
-                <button data-tab="problem4" class="problem-tab tab-inactive text-left p-4 rounded-lg font-medium transition">Высокая административная нагрузка</button>
+                <button data-tab="problem1" class="problem-tab tab-active">Сложность и предвзятость при апелляциях</button>
+                <button data-tab="problem2" class="problem-tab tab-inactive">Непонятные и разрозненные правила</button>
+                <button data-tab="problem3" class="problem-tab tab-inactive">Отсутствие удобного инструмента для постов</button>
             </div>
             <div class="w-full md:w-2/3 bg-white p-8 rounded-xl shadow-lg">
-                <div id="problem1" class="solution-content">
-                    <h3 class="text-2xl font-bold text-indigo-700 mb-4">Решение №1: Справедливые апелляции с ИИ-арбитром</h3>
-                    <p class="text-slate-600">Чтобы исключить человеческий фактор, бот внедряет полностью автоматизированный процесс апелляции. ИИ выступает в роли независимого судьи, а бот — в роли судебного секретаря...</p>
-                </div>
-                <div id="problem2" class="solution-content hidden">
-                    <h3 class="text-2xl font-bold text-indigo-700 mb-4">Решение №2: ИИ-консультант по правилам</h3>
-                    <p class="text-slate-600">Вместо поиска нужного пункта в документах, теперь можно просто спросить у бота. Он работает как личный юрист 24/7...</p>
-                </div>
-                <div id="problem3" class="solution-content hidden">
-                    <h3 class="text-2xl font-bold text-indigo-700 mb-4">Решение №3: TextCrafter для создания постов</h3>
-                    <p class="text-slate-600">Встроенный модуль TextCrafter стандартизирует и упрощает процесс публикации...</p>
-                </div>
-                <div id="problem4" class="solution-content hidden">
-                    <h3 class="text-2xl font-bold text-indigo-700 mb-4">Решение №4: Личный ассистент</h3>
-                    <p class="text-slate-600">Бот берет на себя роль личного ассистента, снимая административную нагрузку с редакторов...</p>
-                </div>
+                <div id="problem1" class="solution-content"><h3 class="text-2xl font-bold text-indigo-700 mb-4">Решение: Справедливые апелляции с ИИ-арбитром</h3><p class="text-slate-600">Чтобы исключить человеческий фактор, бот внедряет полностью автоматизированный процесс апелляции...</p></div>
+                <div id="problem2" class="solution-content hidden"><h3 class="text-2xl font-bold text-indigo-700 mb-4">Решение: ИИ-консультант по правилам</h3><p class="text-slate-600">Вместо поиска нужного пункта в документах, теперь можно просто спросить у бота...</p></div>
+                <div id="problem3" class="solution-content hidden"><h3 class="text-2xl font-bold text-indigo-700 mb-4">Решение: TextCrafter для создания постов</h3><p class="text-slate-600">Встроенный модуль TextCrafter стандартизирует и упрощает процесс публикации...</p></div>
             </div>
         </div>
     </section>
 
-    <!-- Остальные секции со страницы бота (Как это работает, Технологии, Команда, FAQ) идут здесь -->
-    <!-- ... -->
+    <!-- Полное содержимое страницы бота здесь -->
 
 </main>
 
