--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-[#1E1E1E] text-white overflow-x-hidden">
+<body id="main-page" class="bg-[#1E1E1E] text-white overflow-x-hidden">
 
 <!-- Header -->
 <header class="py-6 px-4 md:px-8 sticky top-0 z-50 bg-[#1E1E1E]/80 backdrop-blur-md">
