--- a/bot.html
+++ b/bot.html
@@ -247,7 +247,7 @@
                 <div class="mx-auto bg-slate-100 rounded-full h-24 w-24 flex items-center justify-center mb-4">
                     <span class="text-5xl">🧪</span>
                 </div>
-                <h5 class="text-xl font-bold">Озодбек</h5>
+                <h5 class="text-xl font-bold">HellouHellouHellou</h5>
                 <p class="text-slate-500">Тестер</p>
             </div>
         </div>
