animation design updates

--- a/bot.html
+++ b/bot.html
@@ -85,7 +85,7 @@
 <body class="bg-slate-900 text-slate-300">
 
 <!-- Splash Screen -->
-<div id="splash-screen" class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm z-[100] flex items-center justify-center transition-opacity duration-500 ease-in-out">
+<div id="splash-screen" class="fixed inset-0 bg-slate-900/50 backdrop-blur-lg z-[100] flex items-center justify-center transition-opacity duration-500 ease-in-out">
     <h1 class="text-4xl md:text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-indigo-200 animate-pulse">Honji Review Bot</h1>
 </div>
 
