--- a/bot.html
+++ b/bot.html
@@ -80,12 +80,21 @@
         body.no-scroll {
             overflow: hidden;
         }
+        #splash-screen {
+            opacity: 0;
+            transform: scale(0.9);
+            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+        }
+        #splash-screen.visible {
+            opacity: 1;
+            transform: scale(1);
+        }
     </style>
 </head>
 <body class="bg-slate-900 text-slate-300">
 
 <!-- Splash Screen -->
-<div id="splash-screen" class="fixed inset-0 bg-slate-900/50 backdrop-blur-lg z-[100] flex items-center justify-center transition-opacity duration-500 ease-in-out">
+<div id="splash-screen" class="fixed inset-0 bg-slate-900/50 backdrop-blur-lg z-[100] flex items-center justify-center">
     <h1 class="text-4xl md:text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-indigo-200 animate-pulse">Honji Review Bot</h1>
 </div>
 
